# Fsn3DWin

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
docs/screenshots/: README.md
scripts/: build_windows.ps1  clean_build.ps1  configure_windows.ps1  package_windows.ps1  run_windows.ps1
src/: main.cpp
src/app/: App.cpp  App.hpp
src/filesystem/: FileNode.cpp  FileNode.hpp  FileScanner.cpp  FileScanner.hpp
src/media/: ImageLoader.cpp  ImageLoader.hpp
src/renderer/: InstancedCubeRenderer.cpp  InstancedCubeRenderer.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/scene/: Camera.cpp  Camera.hpp  DemoScene.cpp  DemoScene.hpp  FileWorldBuilder.cpp  FileWorldBuilder.hpp  SceneNode.cpp  SceneNode.hpp
src/ui/: Hud.cpp  Hud.hpp
src/util/: Timer.cpp  Timer.hpp
